# geeode

./: .gitignore  404.html  LICENSE  README.md  geeode.js  geeode.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  requirements-tests.txt  requirements.txt
api/: index.html
de_optim_explained/: index.html
de_optim_workflows/: index.html
docs/: api.md  de_optim_explained.md  de_optim_workflows.md  index.md  quickstart.md  subsampling.md
paper/: figure_generation.py  geeode_paper.bib  geeode_paper.md  paper.md
quickstart/: index.html
search/: search_index.json
src/geeode/: __init__.py  geeode.py
subsampling/: index.html
tests/: test_math.py
